--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ minima:
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-paginate
 
 # Permalinks
 permalink: /blog/:year/:month/:day/:title/
