--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ minima:
   skin: classic
   date_format: "%b %-d, %Y"
   social_links:
-    github: RFlash007
+    github: Ian-M05
     linkedin: ianjcmullins
 plugins:
   - jekyll-feed
